Bold friend text

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -88,7 +88,9 @@ form input[type=text] {
     background-color: #0090da;
 }
 
-.friend
+.bolded {
+    font-weight: bold;
+}
 
 .button {
     display: inline-block;
